--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "react-homework-template",
+  "name": "phonebook-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Yarzik7.github.io/goit-react-hw-08-phonebook/",
+  "homepage": "https://Yarzik7.github.io/phonebook-frontend/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "modern-normalize": "^2.0.0",
     "nanoid": "^4.0.2",
     "notiflix": "^3.2.6",
     "react": "^18.1.0",
